# rust-stm32f446-blinky

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
